# paperless-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  GOALS.yaml  RAG-DEV-GUIDE.md  README.md  docker-compose.ghcr.yml  main.py  package-lock.json  package.json  pyproject.toml  server.js  start-services.sh  test-restriction-service.js
.github/workflows/: docker-build-push.yml  manualPush.yml  release-to-discord.yml  stale.yml
config/: config.js
config/local/: paperless-policy.example.json
docs/: LOCAL_POLICY.md  README.md  index.html
models/: document.js
public/css/: dashboard.css
public/js/: settings.js
routes/: rag.js  setup.js
scripts/evolve/: measure_goals.py
scripts/goals/: check_fork_main_sync.sh  check_upstream_issue_backlog.sh  check_upstream_pr_backlog.sh
scripts/paperless/: applyLocalPolicy.js
services/: aiServiceFactory.js  azureService.js  chatService.js  customService.js  geminiService.js  manualService.js  metadataNormalizationService.js  ollamaService.js  openaiService.js  paperlessService.js  ragService.js  serviceUtils.js  setupService.js
views/: chat.ejs  dashboard.ejs  history.ejs  login.ejs  manual.ejs  playground.ejs  rag.ejs  settings.ejs  setup.ejs  template.ejs
views/partials/: theme-init.ejs
