[project]
name = "paperless-ai"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.3.21",
    "fastapi>=0.95.0",
    "nltk>=3.8.1",
    "numpy>=1.24.2",
    "pydantic>=1.10.7",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
    "requests>=2.28.2",
    "sentence-transformers>=2.2.2",
    "torch==2.9.1+cpu",
    "tqdm>=4.65.0",
    "uvicorn>=0.21.1",
]

[project.optional-dependencies]
gpu = [
    "torch==2.9.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
